Added some styling, working react + css

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,20 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
   </head>
   <body>
-    <div id="content"></div>
-    <script type="text/babel" src="scripts/comments.js">
-      // To get started with this tutorial running your own code, simply remove
-      // the script tag loading scripts/example.js and start writing code here.
-    </script>
+    <div class="row">
+      <div class="col-3 menu">
+        <ul>
+          <li>The Flight</li>
+          <li>The City</li>
+          <li>The Island</li>
+          <li>The Food</li>
+        </ul>
+      </div>
+      <div id="content" class="col-6"></div>
+      <script type="text/babel" src="scripts/comments.js">
+        // To get started with this tutorial running your own code, simply remove
+        // the script tag loading scripts/example.js and start writing code here.
+      </script>
+    </div>
   </body>
 </html>
