--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>React Tutorial</title>
     <!-- Not present in the tutorial. Just for basic styling. -->
     <link rel="stylesheet" href="css/base.css" />
@@ -12,13 +13,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
   </head>
   <body>
+    <div class="row col-12">
+      <ul class="navbar">
+        <li><a href="http://www.google.com">One Google</a></li>
+      </ul>
+    </div>
     <div class="row">
       <div class="col-3 menu">
         <ul>
-          <li>The Flight</li>
-          <li>The City</li>
-          <li>The Island</li>
-          <li>The Food</li>
+          <li>The Thing</li>
+          <li>The Other Thing</li>
+          <li>The Other Other Thing</li>
+          <li>The Last Thing</li>
         </ul>
       </div>
       <div id="content" class="col-6"></div>
