--- a/public/index.html
+++ b/public/index.html
@@ -13,12 +13,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
   </head>
   <body>
-    <div class="row col-12">
-      <ul class="navbar">
+
+    <div class="navBar">
+      <ul >
         <li><a href="http://www.google.com">One Google</a></li>
+        <li><a href="http://www.google.com">Two Googles</a></li>
+        <li><a href="http://www.google.com">Three Googles</a></li>
+        <li><a href="http://www.google.com">Four Googles</a></li>
+        <li><a href="http://www.google.com">Five Googles</a></li>
       </ul>
     </div>
-    <div class="row">
+
+    <div class="row first-row">
       <div class="col-3 menu">
         <ul>
           <li>The Thing</li>
